Fix Safari's image scaling issue on mobile
Use "object-fit" and "height" attribute. Not sure if it truly works

--- a/css/index.scss
+++ b/css/index.scss
@@ -228,6 +228,8 @@ header {
                 justify-content: center;
                 img {
                     opacity: 1;
+                    height: auto;
+                    object-fit: contain;
                     transform: scale(1.12);
                     transition: all 0.35s linear;
                 }
